[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Tools/BaseTool.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Tools/Bucket.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[node name="ToolOptions" instance=ExtResource( 2 )]
offset_right = 138.0
offset_bottom = 105.0
script = ExtResource( 3 )

[node name="ColorRect" parent="." index="0"]
offset_right = 131.0

[node name="Label" parent="." index="1"]
offset_right = 131.0

[node name="FillArea" type="Label" parent="." index="2"]
offset_top = 26.0
offset_right = 131.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Fill area:"

[node name="FillAreaOptions" type="OptionButton" parent="." index="3"]
offset_top = 44.0
offset_right = 131.0
offset_bottom = 64.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Similar area"
items = [ "Similar area", null, false, 0, null, "Similar colors", null, false, 1, null, "Whole selection", null, false, 2, null ]
selected = 0

[node name="SimilaritySlider" parent="." index="4" instance=ExtResource( 1 )]
visible = false
offset_top = 68.0
offset_right = 131.0
offset_bottom = 92.0
value = 100.0
prefix = "Similarity:"

[node name="FillWith" type="Label" parent="." index="5"]
offset_top = 68.0
offset_right = 131.0
offset_bottom = 82.0
size_flags_horizontal = 3
text = "Fill with:"

[node name="FillWithOptions" type="OptionButton" parent="." index="6"]
offset_top = 86.0
offset_right = 131.0
offset_bottom = 106.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Selected color"
items = [ "Selected color", null, false, 0, null, "Pattern", null, false, 1, null ]
selected = 0

[node name="FillPattern" type="VBoxContainer" parent="." index="7"]
visible = false
offset_top = 110.0
offset_right = 131.0
offset_bottom = 198.0
size_flags_horizontal = 3

[node name="Type" type="Button" parent="FillPattern" index="0"]
offset_right = 32.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 32, 32 )
tooltip_text = "Select a brush"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/pressed = SubResource( 1 )
theme_override_styles/focus = SubResource( 2 )
theme_override_styles/disabled = SubResource( 2 )
theme_override_styles/normal = SubResource( 1 )

[node name="Texture2D" type="TextureRect" parent="FillPattern/Type" index="0"]
offset_right = 32.0
offset_bottom = 32.0
expand = true
stretch_mode = 6

[node name="OffsetX" parent="FillPattern" index="1" instance=ExtResource( 1 )]
offset_top = 36.0
offset_right = 131.0
offset_bottom = 60.0
prefix = "Offset X:"

[node name="OffsetY" parent="FillPattern" index="2" instance=ExtResource( 1 )]
offset_top = 64.0
offset_right = 131.0
offset_bottom = 88.0
prefix = "Offset Y:"

[connection signal="item_selected" from="FillAreaOptions" to="." method="_on_FillAreaOptions_item_selected"]
[connection signal="value_changed" from="SimilaritySlider" to="." method="_on_SimilaritySlider_value_changed"]
[connection signal="item_selected" from="FillWithOptions" to="." method="_on_FillWithOptions_item_selected"]
[connection signal="pressed" from="FillPattern/Type" to="." method="_on_PatternType_pressed"]
[connection signal="value_changed" from="FillPattern/OffsetX" to="." method="_on_PatternOffsetX_value_changed"]
[connection signal="value_changed" from="FillPattern/OffsetY" to="." method="_on_PatternOffsetY_value_changed"]
